fix draw method in Deck